cmake_minimum_required(VERSION 3.12)
project(MOOC)

set(CMAKE_CXX_STANDARD 14)

add_executable(MOOC main.cpp)
add_executable(ListLeaves ListLeaves.cpp)
add_executable(TreeTravesal TreeTravesal.cpp)
add_executable(BinTree BinTree.cpp)
add_executable(ReverseLinkedList ReverseLinkedList.cpp)
add_executable(BinTreeOperator BinTreeOperator.cpp)
add_executable(RootOfAVL RootOfAVL.cpp)
add_executable(CompleteBinTree CompleteBinTree.cpp)
add_executable(MaxHeap MaxHeap.cpp)
add_executable(HuffmanTree HuffmanTree.cpp)
add_executable(FileTransfer FileTransfer.cpp)
add_executable(Graph Graph.cpp)
add_executable(popsequence popsequence.cpp)
add_executable(ConnectedSet ConnectedSet.cpp)